# robot_teach_in

./: CMakeLists.txt  CRB15000_5_95_BACKUP_2022-12-11.tar  README.md  VRT.rsstn  package.xml
Virtual_RobotTeachIn/: rsmeta.xml  vcrwidir
Virtual_RobotTeachIn/HOME/: .old
Virtual_RobotTeachIn/TEMP/: hook_list.txt
Virtual_RobotTeachIn/TEMP/sc_meta/: sc_crc._ml
Virtual_RobotTeachIn/internal/: cfgrules_registry.xml  cfgtext_registry.xml  controller.rsf  env_vars.txt  hw_compatibility_registry.xml  key.id  opt_l0.cmd  opt_l2.cmd  option.cmd  option_registry.xml  prodinfo.xml  prodlist.xml  program.id  system.guid  system.xml  template.guid
Virtual_RobotTeachIn/internal/BOOT/: BOOTAPP.CFG
Virtual_RobotTeachIn/internal/OPTIONS/SC/: sc_cfg.xml  sc_op_mode_pin.enc
Virtual_RobotTeachIn/internal/RAPID/PRG2/: 000902B6  000902B9  000902BA  000902BF  000902C2  000DCE57  00133BC3  005AE34A
Virtual_RobotTeachIn/internal/SC_DISK/: hook.txt  storageArea1.flash  storageArea2.flash
Virtual_RobotTeachIn/internal/ctrldata/: controller_properties.txt
WPF_APP_TUTORIAL/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WPF_APP_TUTORIAL.csproj  WPF_APP_TUTORIAL.sln
WPF_TeachDeviceEmulator/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WPF_TeachDeviceEmulator.sln
data/: data_from_arduino.txt  test_data.txt
docu/: evaluierung.txt  info.txt
launch/: robot_teach_in.launch
robot_teach_in/src/: pose_controller.cpp  requirments.txt  robot_teach_in.cpp
src/: arduino.py  communication.py  foo.cpp  profinet.sh  robot_teach_in copy 2.cpp  robot_teach_in.cpp  test_node.cpp
src/WinFormsApp2/: WinFormsApp2.sln
src/WinFormsApp2/WinFormsApp2/: Form1.Designer.cs  Form1.cs  WinFormsApp2.csproj
src/arduino_mega/: arduino_mega.ino
(+11 files in other folders)
